--- a/requirements.txt
+++ b/requirements.txt
@@ -1,190 +1,11 @@
-aiofiles==23.2.1
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
-aiosignal==1.3.2
-annotated-types==0.7.0
-anthropic==0.44.0
-anyio==4.8.0
-asttokens==3.0.0
-async-timeout==4.0.3
-asyncer==0.0.7
-attrs==24.3.0
-beautifulsoup4==4.12.3
-bidict==0.23.1
-cachetools==5.5.0
-certifi==2024.12.14
-chainlit==2.1.0
-charset-normalizer==3.4.1
-chevron==0.14.0
-click==8.1.8
-colorama==0.4.6
-comm==0.2.2
-dataclasses-json==0.6.7
-debugpy==1.8.12
-decorator==5.1.1
-defusedxml==0.7.1
-Deprecated==1.2.15
-deprecation==2.1.0
-dirtyjson==1.0.8
-distro==1.9.0
-docstring_parser==0.16
-exceptiongroup==1.2.2
-executing==2.1.0
-fastapi==0.115.8
-filelock==3.17.0
-filetype==1.2.0
-frozenlist==1.5.0
-fsspec==2024.12.0
-google-ai-generativelanguage==0.6.15
-google-api-core==2.24.0
-google-api-python-client==2.159.0
-google-auth==2.37.0
-google-auth-httplib2==0.2.0
-google-cloud-aiplatform==1.78.0
-google-cloud-bigquery==3.29.0
-google-cloud-core==2.4.1
-google-cloud-resource-manager==1.14.0
-google-cloud-storage==2.19.0
-google-crc32c==1.6.0
-google-generativeai==0.8.4
-google-resumable-media==2.7.2
-googleapis-common-protos==1.66.0
-greenlet==3.1.1
-grpc-google-iam-v1==0.14.0
-grpcio==1.67.1
-grpcio-status==1.67.1
-h11==0.14.0
-httpcore==1.0.7
-httplib2==0.22.0
-httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.27.1
-idna==3.10
-importlib_metadata==8.5.0
-ipykernel==6.29.5
-ipython==8.31.0
-jedi==0.19.2
-Jinja2==3.1.5
-jiter==0.8.2
-joblib==1.4.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-lancedb==0.18.0
-langchain==0.3.15
-langchain-anthropic==0.3.3
-langchain-community==0.3.15
-langchain-core==0.3.31
-langchain-google-genai==2.0.9
-langchain-google-vertexai==2.0.12
-langchain-text-splitters==0.3.5
-langgraph==0.2.66
-langgraph-checkpoint==2.0.10
-langgraph-sdk==0.1.51
-langsmith==0.2.11
-Lazify==0.4.0
-Levenshtein==0.26.1
-literalai==0.1.103
-llama-index-core==0.12.12
-llama-index-readers-file==0.4.3
-llama-parse==0.5.19
-MarkupSafe==3.0.2
-marshmallow==3.25.1
-matplotlib-inline==0.1.7
-mpmath==1.3.0
-msgpack==1.1.0
-multidict==6.1.0
-mypy-extensions==1.0.0
-nest-asyncio==1.6.0
-networkx==3.4.2
-nltk==3.9.1
-numpy==1.26.4
-openai==1.59.9
-opentelemetry-api==1.29.0
-opentelemetry-exporter-otlp==1.29.0
-opentelemetry-exporter-otlp-proto-common==1.29.0
-opentelemetry-exporter-otlp-proto-grpc==1.29.0
-opentelemetry-exporter-otlp-proto-http==1.29.0
-opentelemetry-instrumentation==0.50b0
-opentelemetry-proto==1.29.0
-opentelemetry-sdk==1.29.0
-opentelemetry-semantic-conventions==0.50b0
-orjson==3.10.15
-overrides==7.7.0
-packaging==24.2
-pandas==2.2.3
-parso==0.8.4
-pillow==11.1.0
-platformdirs==4.3.6
-prompt_toolkit==3.0.50
-propcache==0.2.1
-proto-plus==1.25.0
-protobuf==5.29.3
-psutil==6.1.1
-pure_eval==0.2.3
-pyarrow==19.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pydantic==2.10.5
-pydantic-settings==2.7.1
-pydantic_core==2.27.2
-Pygments==2.19.1
-PyJWT==2.10.1
-pylance==0.22.0
-pyparsing==3.2.1
-pypdf==5.1.0
-python-dateutil==2.9.0.post0
+chainlit==2.2.0
+langchain==0.3.18
+langchain_community==0.3.17
+langchain_core==0.3.34
+langchain_openai==0.3.4
+langgraph==0.2.70
+llama_index==0.12.16
+llama_parse==0.6.0
+pydantic==2.10.6
 python-dotenv==1.0.1
-python-engineio==4.11.2
-python-multipart==0.0.18
-python-socketio==5.12.1
-pytz==2024.2
-pywin32==308
-PyYAML==6.0.2
-pyzmq==26.2.0
-RapidFuzz==3.11.0
-regex==2024.11.6
-requests==2.32.3
-requests-toolbelt==1.0.0
-rsa==4.9
-safetensors==0.5.2
-scikit-learn==1.6.1
-scipy==1.15.1
-sentence-transformers==3.3.1
-shapely==2.0.6
-simple-websocket==1.1.0
-six==1.17.0
-sniffio==1.3.1
-soupsieve==2.6
-SQLAlchemy==2.0.37
-stack-data==0.6.3
-starlette==0.41.3
-striprtf==0.0.26
-sympy==1.13.1
-syncer==2.0.3
-tantivy==0.22.0
-tavily-python==0.5.0
-tenacity==9.0.0
-threadpoolctl==3.5.0
-tiktoken==0.8.0
-tokenizers==0.21.0
-tomli==2.2.1
-torch==2.5.1
-tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.48.1
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2025.1
-uptrace==1.29.0
-uritemplate==4.1.1
-urllib3==2.3.0
-uvicorn==0.34.0
-watchfiles==0.20.0
-wcwidth==0.2.13
-wrapt==1.17.2
-wsproto==1.2.0
-yarl==1.18.3
-zipp==3.21.0
+python_Levenshtein==0.26.1
