--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 chainlit==2.2.0
-langchain==0.3.18
-langchain_community==0.3.17
-langchain_core==0.3.34
-langchain_openai==0.3.4
+lancedb==0.19.0
+langchain-community==0.3.17
+langchain-openai==0.3.4
 langgraph==0.2.70
-llama_index==0.12.16
-llama_parse==0.6.0
-pydantic==2.10.6
-python-dotenv==1.0.1
-python_Levenshtein==0.26.1
+Levenshtein==0.26.1
+llama-index==0.12.16
+sentence-transformers==3.4.1
+setuptools==65.5.0
+tantivy==0.22.0
